--- a/.github/workflows/pre-genesis-transactions-checks.yml
+++ b/.github/workflows/pre-genesis-transactions-checks.yml
@@ -2,7 +2,7 @@ name: Check Pre Genesis Transactions 👨‍🔧
 
 on:
   merge_group:
-  pull_request_target:
+  pull_request:
     branches:
       - main
   push:
