--- a/.github/workflows/pre-genesis-transactions-checks.yml
+++ b/.github/workflows/pre-genesis-transactions-checks.yml
@@ -85,7 +85,7 @@ jobs:
           poetry run python3 scripts/merge-pr.py
 
   main:
-    if: ${{ github.ref == 'refs/heads/main' }}
+    if: ${{ github.event_name == 'push' || 'refs/heads/main' }}
     name: Rebuild graphs
     runs-on: ubuntu-latest
     steps:
