--- a/.github/workflows/pre-genesis-transactions-checks.yml
+++ b/.github/workflows/pre-genesis-transactions-checks.yml
@@ -34,6 +34,8 @@ jobs:
       - name: Set up python
         id: setup-python
         uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
       - name: Install and configure Poetry
         uses: snok/install-poetry@v1
         with:
@@ -64,6 +66,8 @@ jobs:
       - name: Set up python
         id: setup-python
         uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
       - name: Install and configure Poetry
         uses: snok/install-poetry@v1
         with:
@@ -93,6 +97,8 @@ jobs:
       - name: Set up python
         id: setup-python
         uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
       - name: Install and configure Poetry
         uses: snok/install-poetry@v1
         with:
