--- a/.github/workflows/pre-genesis-transactions-checks.yml
+++ b/.github/workflows/pre-genesis-transactions-checks.yml
@@ -86,7 +86,7 @@ jobs:
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
       - run: |
           source .venv/bin/activate
-          poetry run python3 scripts/merge-pr.py
+          poetry run python3 scripts/validate-pr.py
 
   main:
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
@@ -117,7 +117,7 @@ jobs:
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
       - run: |
           source .venv/bin/activate
-          poetry run python3 scripts/rebuild.py
+          poetry run python3 scripts/merge-pr.py
 
   can_enqueue:
     needs: [pr-check]
