--- a/.github/workflows/pre-genesis-transactions-checks.yml
+++ b/.github/workflows/pre-genesis-transactions-checks.yml
@@ -31,6 +31,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Set up python
         id: setup-python
         uses: actions/setup-python@v5
