--- a/.github/workflows/pre-genesis-transactions-checks.yml
+++ b/.github/workflows/pre-genesis-transactions-checks.yml
@@ -65,6 +65,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - uses: sigoden/install-binary@v1
+        with:
+          repo: anoma/namada
+          tag: v0.40.0
       - name: Set up python
         id: setup-python
         uses: actions/setup-python@v5
@@ -89,6 +93,7 @@ jobs:
       - run: |
           source .venv/bin/activate
           poetry run python scripts/validate-pr.py
+      - uses: stefanzweifel/git-auto-commit-action@v5
 
   main:
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
