--- a/.github/workflows/pre-genesis-transactions-checks.yml
+++ b/.github/workflows/pre-genesis-transactions-checks.yml
@@ -65,6 +65,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - uses: sigoden/install-binary@v1
         with:
           repo: anoma/namada
@@ -92,7 +94,7 @@ jobs:
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
       - run: |
           source .venv/bin/activate
-          poetry run python scripts/validate-pr.py
+          poetry run python scripts/merge-pr.py
       - uses: stefanzweifel/git-auto-commit-action@v5
 
   main:
