--- a/.github/workflows/pre-genesis-transactions-checks.yml
+++ b/.github/workflows/pre-genesis-transactions-checks.yml
@@ -97,7 +97,7 @@ jobs:
           poetry run python scripts/merge-pr.py
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          token: ${{ secret.PAT }}
+          token: ${{ secrets.PAT }}
 
   main:
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
