--- a/.github/workflows/pre-genesis-transactions-checks.yml
+++ b/.github/workflows/pre-genesis-transactions-checks.yml
@@ -94,7 +94,7 @@ jobs:
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
       - run: |
           source .venv/bin/activate
-          poetry run python scripts/merge-pr.py
+          poetry run python scripts/validate-pr.py
 
   main:
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
@@ -127,8 +127,6 @@ jobs:
           source .venv/bin/activate
           poetry run python scripts/merge-pr.py
       - uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          token: ${{ secrets.PAT }}
 
   can_enqueue:
     needs: [pr-check]
