--- a/.github/workflows/pre-genesis-transactions-checks.yml
+++ b/.github/workflows/pre-genesis-transactions-checks.yml
@@ -57,6 +57,8 @@ jobs:
       - run: |
           source .venv/bin/activate
           poetry run python scripts/validate-pr.py
+        env:
+          ALIAS: ${{ github.actor }}
 
   merge-check:
     runs-on: ubuntu-latest
@@ -95,6 +97,8 @@ jobs:
       - run: |
           source .venv/bin/activate
           poetry run python scripts/validate-merge.py
+        env:
+          ALIAS: ${{ github.actor }}
 
   main:
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
@@ -134,6 +138,8 @@ jobs:
       - run: |
           source .venv/bin/activate
           poetry run python scripts/rebuild.py
+        env:
+          ALIAS: ${{ github.actor }}
       - uses: stefanzweifel/git-auto-commit-action@v5
 
   can_enqueue:
