--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 plotly = "^5.22.0"
 kaleido = "0.2.1"
 jinja2 = "^3.1.4"
+bech32m = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 toml = "^0.10.2"
