--- a/.github/workflows/pre-genesis-transactions-checks.yml
+++ b/.github/workflows/pre-genesis-transactions-checks.yml
@@ -74,6 +74,7 @@ jobs:
         with:
           repo: anoma/namada
           tag: v0.40.0
+          name: namadac
       - name: Set up python
         id: setup-python
         uses: actions/setup-python@v5
